# zman.mendy.dev

./: .gitattributes  .gitignore  Cargo.toml  README.md  justfile  serve.ts
data/: admin1CodesASCII.txt  all-cities.jsonl  coords_to_elevation.json  get_elevations.py
data-cli/: Cargo.toml
data-cli/src/: build_admin1.rs  build_data.rs  deploy.rs  main.rs  regen_sqlite.rs
frontend/: biome.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: cities.ts  geolocation.ts  index.ts  types.ts
frontend/src/lib/components/: CitySearch.svelte  ZmanimResult.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
js-src/: app.ts  types.ts
public/: _headers  index.html
wasm-funcs/: Cargo.toml
wasm-funcs/src/: lib.rs
