[package]
name = "data-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
brotli = "8.0.2"
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4.3"
icu = "2.2.0"
jiff = "0.2.23"
rand = "0.10.1"
rusqlite = "0.39.0"
rust-zmanim = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
sha2 = "0.11.0"
ureq = {version = "3.3.0",features = ["multipart"]}
zip = "8.5.1"
