[package]
name = "wasm-funcs"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
jiff = { version = "0.2.23", default-features = false, features = [] }
rust-zmanim = "0.2.1"
icu_calendar = { version = "2.2.1", default-features = false, features = [] }
jiff-icu = { version = "0.2.2", default-features = false, features = [] }
# hebrew_holiday_calendar = { version = "0.2", default-features = false }
# jiff-icu = "0.2.2"
# icu = "2.2.0"


